<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFFFFF">


        <TextView
            android:id="@+id/tex"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/text10"


            android:textSize="18sp"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center|start">
            <!-- TextView -->



            <ImageView
                android:id="@+id/imag"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/left_button"
                android:layout_gravity="center"
                android:scaleType="centerCrop"

                android:contentDescription="@string/app_name" />

            <!-- ImageView -->



        </LinearLayout>



    </androidx.appcompat.widget.Toolbar>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >



    <com.google.android.material.card.MaterialCardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:strokeColor="@color/white"
        app:cardCornerRadius="100dp"
        app:cardBackgroundColor="#F5F5FA"
        >
<ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:src="@drawable/img_1"
    android:layout_gravity="center"
    />



    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:textSize="23sp"
        android:textStyle="bold"
        android:text="@string/text11"


        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#828796"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:textSize="16sp"

        android:text="@string/text12"


        />


</LinearLayout>






    <com.google.android.material.button.MaterialButton
        android:layout_width="356dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="17sp"
        android:text="@string/text13"
        android:backgroundTint="#0D72FF" />








</LinearLayout>